# ocudu

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  isac_phy_tap_findings.md  issue-423-investigation-report.md
lib/: CMakeLists.txt
lib/asn1/: CMakeLists.txt  asn1_utils.cpp
lib/asn1/lpp/: lpp.cpp
lib/cu_cp/: cu_configurator_impl.cpp  cu_configurator_impl.h  cu_cp_impl.cpp  cu_cp_impl.h  cu_cp_impl_interface.h  log_format.h  xnap_repository.cpp  xnap_repository.h
lib/cu_cp/adapters/: cell_meas_manager_adapters.h  du_processor_adapters.h  e1ap_adapters.h  ngap_adapters.h  nrppa_adapters.h  rrc_ue_adapters.h  xnap_adapters.h
lib/cu_cp/cell_meas_manager/: cell_meas_manager_helpers.cpp  cell_meas_manager_helpers.h  cell_meas_manager_impl.cpp  cell_meas_manager_impl.h  measurement_context.h
lib/cu_cp/cu_cp_controller/: cu_cp_controller.cpp  xnc_connection_manager.cpp  xnc_connection_manager.h
lib/cu_cp/cu_up_processor/: cu_up_processor.h  cu_up_processor_impl.cpp  cu_up_processor_impl.h
lib/cu_cp/du_processor/: du_configuration_manager.cpp  du_processor.h  du_processor_impl.cpp  du_processor_impl.h
lib/cu_cp/mobility_manager/: mobility_manager_helpers.cpp  mobility_manager_helpers.h  mobility_manager_impl.cpp  mobility_manager_impl.h
lib/cu_cp/routines/: initial_context_setup_routine.cpp  reestablishment_context_modification_routine.cpp  reestablishment_context_modification_routine.h  ue_context_release_routine.cpp  ue_context_release_routine.h  ue_removal_routine.cpp  ue_removal_routine.h  ue_resume_routine.cpp  ue_resume_routine.h  ue_suspend_routine.cpp  ue_suspend_routine.h  ue_transaction_info_release_routine.cpp  ue_transaction_info_release_routine.h
lib/cu_cp/task_schedulers/: xnap_task_scheduler.h
lib/cu_cp/ue_location_manager/: ue_location_manager.cpp  ue_location_manager.h
lib/cu_cp/ue_manager/: cu_cp_ue_impl.cpp  cu_cp_ue_impl.h  cu_cp_ue_impl_interface.h  ue_manager_impl.cpp  ue_manager_impl.h  ue_task_scheduler_impl.cpp  ue_task_scheduler_impl.h
lib/cu_cp/up_resource_manager/: up_resource_manager_impl.h
lib/cu_up/: cu_up_impl.cpp  cu_up_impl.h  cu_up_manager_impl.cpp  cu_up_manager_impl.h  pdu_session_manager_impl.cpp  ue_context.h  ue_manager.cpp  ue_manager.h  ue_manager_interfaces.h
lib/cu_up/adapters/: pdcp_adapters.h
lib/cu_up/routines/: cu_up_e1_connection_loss_routine.cpp  cu_up_e1_connection_loss_routine.h  cu_up_setup_routine.cpp  cu_up_setup_routine.h
lib/du/du_high/: du_high_executor_mapper.cpp  du_high_impl.cpp  du_high_impl.h
lib/e1ap/common/: e1ap_asn1_converters.h  log_helpers.cpp  log_helpers.h
lib/e1ap/cu_cp/: e1ap_cu_cp_asn1_helpers.h  e1ap_cu_cp_impl.cpp  e1ap_cu_cp_impl.h
lib/e1ap/cu_up/: e1ap_cu_up_asn1_helpers.h  e1ap_cu_up_factory.cpp  e1ap_cu_up_impl.cpp  e1ap_cu_up_impl.h
lib/e2/: CMakeLists.txt
lib/e2/common/: e2_connection_handler.cpp  e2_entity.cpp  e2_entity.h  e2_impl.cpp  e2_impl.h  e2_subscription_manager_impl.cpp  e2_subscription_manager_impl.h
lib/e2/gateways/: e2_network_client_factory.cpp
lib/e2/procedures/: e2_setup_procedure.cpp  e2_setup_procedure.h  e2ap_connection_update_procedure.cpp  e2ap_connection_update_procedure.h  e2ap_indication_procedure.cpp  e2ap_indication_procedure.h  e2ap_ric_control_procedure.cpp  e2ap_ric_control_procedure.h  e2ap_setup_procedure.cpp  e2ap_setup_procedure.h  e2ap_subscription_delete_procedure.cpp  e2ap_subscription_delete_procedure.h  e2ap_subscription_setup_procedure.cpp  e2ap_subscription_setup_procedure.h  ric_reconnection_routine.cpp  ric_reconnection_routine.h
lib/f1ap/: log_helpers.cpp  log_helpers.h
lib/f1ap/cu_cp/: f1ap_asn1_helpers.h  f1ap_cu_impl.cpp  f1ap_cu_impl.h
lib/fapi_adaptor/: precoding_matrix_mapper.cpp  precoding_matrix_mapper_functions.h  precoding_matrix_table_generator.cpp  uci_part2_correspondence_generator.cpp
lib/gateways/: sctp_network_server_impl.cpp  udp_network_gateway_impl.cpp  udp_network_gateway_impl.h
lib/gtpu/: gtpu_demux_factory.cpp  gtpu_demux_impl.cpp  gtpu_demux_impl.h  gtpu_pdu.h  gtpu_teid_pool_factory.cpp  gtpu_teid_pool_impl.h  gtpu_tunnel_ngu_tx_impl.h
lib/isac/: CMakeLists.txt  README.md  isac_csi_payload.cpp  isac_csi_payload.h  isac_csi_sink.h  isac_pusch_estimator_tap_decorator.h  isac_pusch_estimator_tap_factory.cpp  isac_pusch_estimator_tap_factory.h  isac_pusch_processor_tap_decorator.h  isac_tap_context.h  isac_zmq_sink.cpp  isac_zmq_sink.h
lib/mac/: README.md
lib/mac/mac_dl/: cell_dl_harq_buffer_pool.cpp  cell_dl_harq_buffer_pool.h  mac_cell_processor.cpp  mac_dl_ue_repository.cpp  mac_dl_ue_repository.h  si_message_extension_handler_impl.cpp
lib/mac/mac_sched/: mac_rach_handler.cpp  mac_rach_handler.h  ocudu_scheduler_adapter.cpp  uci_cell_decoder.cpp  uci_cell_decoder.h
lib/mac/mac_ul/: mac_ul_ue_manager.cpp
lib/ngap/: log_helpers.cpp  log_helpers.h  ngap_asn1_converters.h  ngap_asn1_helpers.h  ngap_impl.cpp  ngap_impl.h
lib/ngap/ngap_validators/: ngap_validators.h
lib/ngap/procedures/: ngap_dl_ran_status_transfer_procedure.h  ngap_handover_preparation_procedure.cpp  (+6 more)
lib/nrppa/: nrppa_asn1_converters.h  nrppa_asn1_helpers.h  nrppa_factory.cpp  nrppa_impl.cpp  nrppa_impl.h
lib/ntn/: CMakeLists.txt  ntn_assistance_info_generator.cpp  ntn_assistance_info_generator.h  ntn_configuration_manager_impl.cpp  ntn_configuration_manager_impl.h  ntn_orbital_compute_module.cpp  ntn_orbital_compute_module.h  ntn_sib19_helpers.cpp  ntn_sib19_helpers.h
lib/pdcp/: pdcp_entity_rx.cpp  pdcp_entity_rx.h  pdcp_entity_tx.cpp  pdcp_pdu.h  pdcp_rx_metrics_impl.h  pdcp_tx_window.cpp
lib/radio/: CMakeLists.txt  radio_factory.cpp
lib/ran/: CMakeLists.txt
lib/rrc/: rrc_du_impl.cpp  rrc_du_impl.h
lib/scheduler/: cell_scheduler.h  scheduler_impl.cpp  scheduler_impl.h
lib/security/: integrity_engine_generic.cpp  integrity_engine_nia2_cmac.cpp  integrity_engine_nia2_non_cmac.cpp  integrity_engine_nia2_non_cmac.h  security_engine_impl.cpp  security_engine_impl.h
lib/support/: CMakeLists.txt
lib/xnap/: xnap_asn1_converters.h  xnap_context.h  xnap_impl.cpp  xnap_impl.h
(+881 files in other folders)
