# SPDX-FileCopyrightText: Copyright (C) 2021-2026 Software Radio Systems Limited
# SPDX-License-Identifier: BSD-3-Clause-Open-MPI


# Do not build by default.
set_directory_properties(PROPERTIES EXCLUDE_FROM_ALL TRUE)

add_subdirectory(asn1)
add_subdirectory(cu_cp)
add_subdirectory(cu_up)
add_subdirectory(du)
add_subdirectory(e1ap)
add_subdirectory(e2)
add_subdirectory(f1ap)
add_subdirectory(f1u)
add_subdirectory(fapi_adaptor)
if (NOT DISABLE_SCTP)
    add_subdirectory(gateways)
endif ()
add_subdirectory(gtpu)
if (DPDK_FOUND)
    add_subdirectory(hal)
endif (DPDK_FOUND)
add_subdirectory(instrumentation)
if (ENABLE_ISAC_TAP)
    add_subdirectory(isac)
endif ()
add_subdirectory(mac)
add_subdirectory(ngap)
add_subdirectory(ntn)
add_subdirectory(xnap)
add_subdirectory(nrppa)
add_subdirectory(nru)
add_subdirectory(ofh)
add_subdirectory(pcap)
add_subdirectory(pdcp)
add_subdirectory(phy)
add_subdirectory(psup)
add_subdirectory(radio)
add_subdirectory(ran)
add_subdirectory(rlc)
add_subdirectory(rohc)
add_subdirectory(rrc)
add_subdirectory(ru)
add_subdirectory(scheduler)
add_subdirectory(sdap)
if (NOT DISABLE_MBEDTLS)
    add_subdirectory(security)
endif ()
add_subdirectory(ocudulog)
add_subdirectory(ocuduvec)
add_subdirectory(support)
